front_end/styles/pages/home.css
/* :root {
    --home-border-color: #003b5c;
    --home-bg-color: white;
} */

.home-page{

    main {
        min-height: 1000px;
        min-width: 600px;
    }
    
    #journal-form {
        gap: 50px;
        /* padding: 3%; */
        display: grid;
        grid-template-columns: 1fr 3fr;
        width: 100%;
        height: 100%;
        justify-self: center;
    }

    #aiPrompt {
        border: 2px solid var(--main-color);
        grid-column: 1/-1;
        grid-row: 1/2;
        height: 100px;
        background-color: var(--secondary-color);
        border-radius: 5px;
        min-height: 150px;
        display: grid;
        grid-template-columns: 9fr 1fr;
    }

    #currGoals {
        border: 2px solid var(--main-color);
        height: 600px;
        grid-column: 1/2;
        grid-row: 2/8;
        background-color: var(--secondary-color);
        border-radius: 5px;
        min-height: 900px;
    }

    .goal_list {
        color: var(--fourth-color);
        margin: 0 5% 0 0;

    }

    .goal_list li {
        color: var(--fourth-color);
        font-size: 1.3em;
    }

    #journalEntries {
        border: 2px solid var(--main-color);
        grid-column: 2/-1;
        grid-row: 2/6;
        background-color: var(--secondary-color);
        border-radius: 5px;
        min-height: 300px;
    }

    #journal_entry {
        background-color: var(--main-color);
        margin: 0 5%;
        width: 90%;
        height: 79%;
        box-sizing: border-box;
        font-size: 1.6em;
        resize: none;
        padding: 1%;
        color: var(--fourth-color);
        border: 2px solid var(--fourth-color);
        border-radius: 1%;
        caret-color: auto;
        cursor: default;
    }

    #journal_entry:focus {
        cursor: text;
    }

    #journal_entry::placeholder, #goal-creation::placeholder, .goalName::placeholder {
        color: var(--fourth-color);
        opacity: .5;
    }


    #addGoal {
        border: 2px solid var(--main-color);
        grid-column: 2/-1;
        grid-row: 6/8;
        background-color: var(--secondary-color);
        border-radius: 5px;
        min-width: 400px;
        min-height: 200px;
    

    }

    h2 {
        color: var(--fourth-color);
        margin: 1% 10px;
        text-decoration: underline;
        border-radius: 5px;
        height: 35px
    }

    #goal-creation {
        background-color: var(--main-color);
        margin: 0 5%;
        width: 90%;
        height: 52%;
        box-sizing: border-box;
        font-size: 1.6em;
        resize: none;
        padding: 1%;
        color: var(--fourth-color);
        border: 2px solid var(--fourth-color);
        border-radius: 1%;
        caret-color: auto;
        cursor: default;
    }
    .goalName {
        background-color: var(--main-color);
        margin: 0 5% 1%;
        width: 90%;
        height: auto;
        box-sizing: border-box;
        font-size: 1.6em;
        resize: none;
        color: var(--fourth-color);
        border: 2px solid var(--fourth-color);
        border-radius: 1%;
        caret-color: auto;
        cursor: default;
        padding: 1%;
    }

    #goal-creation:focus, .goalName:focus {
        cursor: text;
    }


    #submit-journal, #submit-goal {
        display: flex;
        background-color: var(--main-color);
        color: var(--fourth-color);
        min-width: 150px;
        width: auto;
        border-radius: 5px;
        border: 2px solid var(--fourth-color);
        font-size: 1.5rem;
        justify-self: flex-end;
        margin: 1.5% 5%;
        justify-content: center;
        align-items: center;
        min-height: 40px;
        
}

    #submit-journal:hover, #submit-goal:hover {
        background-color: var(--fourth-color);
        color: var(--secondary-color);
}

#refresh-btn {
        background-color: transparent;
        color: var(--fourth-color);
        width: auto;
        border: none;
        font-size: 1.5rem;
        justify-self: right;
        height: 35px;
        margin: 5px;
}

#refresh-btn:hover {
color: var(--main-color);
}

#prompt-text {
    grid-column: 1/-1;
    grid-row: 2/4;

}




}

